Bug 36663: Update alignment of datatable buttons
Pack items from the end

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
@@ -586,6 +586,7 @@ tbody {
     div.dt-buttons {
         display: flex;
         flex-grow: 1;
+        justify-content: flex-end;
 
         button.dt_button_clear_filter {
             margin-right: auto;
